# amplifier-bundle-project-memory

./: .gitignore  CHANGELOG.md  README.md  bundle-spec.md  bundle.md  implementation-plan.md
.bundlewizard/: bundle-spec.md  implementation-plan.md
agents/: librarian.md  scribe.md
behaviors/: project-memory.yaml
context/: instructions.md  memory-schema.md
modules/hooks-memory-capture/: pyproject.toml
modules/hooks-memory-capture/amplifier_module_hooks_memory_capture/: __init__.py
modules/hooks-session-briefing/: pyproject.toml
modules/hooks-session-briefing/amplifier_module_hooks_session_briefing/: __init__.py
modules/hooks-session-end-capture/: pyproject.toml
modules/hooks-session-end-capture/amplifier_module_hooks_session_end_capture/: __init__.py
modules/project-memory-core/: pyproject.toml
modules/project-memory-core/project_memory_core/: __init__.py  decay.py  heuristics.py  paths.py  schema.py  store.py
modules/tool-project-memory/: pyproject.toml
modules/tool-project-memory/amplifier_module_tool_project_memory/: __init__.py
skills/project-memory/: SKILL.md
tests/: conftest.py
tests/test_composition/: test_structural.py
tests/test_core/: test_decay.py  test_heuristics.py  test_schema.py  test_store.py
tests/test_hooks/: test_hooks.py
tests/test_tool/: test_tool_project_memory.py
