[project]
name = "amplifier-module-hooks-memory-capture"
version = "0.1.0"
description = "Amplifier module: hooks for capturing tool and prompt events into the raw memory buffer"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["project-memory-core"]  # amplifier-core is a peer dep provided by Amplifier runtime

[project.entry-points."amplifier.modules"]
hooks-memory-capture = "amplifier_module_hooks_memory_capture:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hooks_memory_capture"]
