[project]
name = "amplifier-module-hooks-session-briefing"
version = "0.1.0"
description = "Amplifier module: session:start hook that injects a project memory briefing into context"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["project-memory-core"]  # amplifier-core is a peer dep provided by Amplifier runtime

[project.entry-points."amplifier.modules"]
hooks-session-briefing = "amplifier_module_hooks_session_briefing:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hooks_session_briefing"]
