[project]
name = "amplifier-module-hooks-session-end-capture"
version = "0.1.0"
description = "Amplifier module: session:end hook that triggers the Scribe agent to process raw captures"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["project-memory-core"]  # amplifier-core is a peer dep provided by Amplifier runtime

[project.entry-points."amplifier.modules"]
hooks-session-end-capture = "amplifier_module_hooks_session_end_capture:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hooks_session_end_capture"]
