[project]
name = "project-memory-core"
version = "0.1.0"
description = "Shared library for project memory: storage, schema, decay model, heuristics"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["project_memory_core"]
